<resources>
    <string name="app_name">Alawan</string>
    <string name="login">Se connecter</string>
    <string name="logo">Logo</string>
    <string name="user">Nom d\'utilisateur</string>
    <string name="nomComplet">Nom complet</string>
    <string name="password">Mot de passe</string>
    <string name="confirmerPassword">Confirmer le mot de passe</string>
    <string name="background">Background</string>
    <string name="email">courriel@test.com</string>
    <string name="oublieMdp">Mot de passe oublié ?</string>
    <string name="creerCompte">Vous n\'avez pas de compte ?</string>
    <string name="dejaCompte">Vous avez déjà un compte ?</string>
    <string name="inscrire">S\'inscrire</string>
    <string name="creerCompteTitre">Créer un compte</string>
    <string name="creerMonCompte">Créer mon compte</string>
    <string name="reinitialisationMdp">Réinitialiser le mot de passe</string>
    <string name="reinitialiser">Réinitialiser</string>
    <string name="nomApp">Alawan</string>
    <string name="accueilText">Accueil</string>
    <string name="rechercheText">Recherche</string>
    <string name="chatText">Chat</string>
    <string name="alerteText">Alertes</string>
    <string name="profilText">Profil</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bonjour">Bonjour "nom",</string>
    <string name="soustitreBonjour">Nous espérons que vos animaux se portent bien</string>
    <string name="alerteEnCours">Alertes en cours : </string>
    <string name="vosAnimaux">Vos animaux</string>
    <string name="compagnons">Compagnons</string>
    <string name="prenom">Prénom</string>
    <string name="nom">Nom de famille</string>
    <string name="modifierProfil">Modifier le profil</string>
    <string name="telephone">(000) 000\-0000</string>
    <string name="deconnexion">Déconnexion</string>
    <string name="modifierAdresse">Modifier l\'adresse</string>
    <string name="modifier">Modifier</string>
    <string name="aide">Aide</string>
    <string name="ville">Ville</string>
    <string name="rue">Rue</string>
    <string name="numeroRue">Numéro</string>
    <string name="postal">Code postal</string>
    <string name="detailAnimaux">Veuillez sélectionner le compagnon qui est perdu</string>
    <string name="nouveauCompagnon">Nouveau compagnon ?</string>
    <string name="adresseTrouve">Adresse</string>
    <string name="descriptionAnimal">Description de l\'animal</string>
    <string name="datePerdue">Date perdue</string>
    <string name="lancerAlerte">Lancer l\'alerte</string>
    <string name="title_activity_maps">Maps</string>
    <string name="continuerInviter">Continuer en tant qu\'invité</string>
    <string name="image">Image</string>
    <string name="insererPhoto">Insérer une photo ici </string>
    <string name="description">Description</string>
    <string name="nomCompagnon">Nom de votre compagnon</string>
    <string name="dateNaissance">Date de naissance</string>
    <string name="ajouterCompagnon">Ajouter un compagnon</string>
    <string name="textview">Text view</string>
    <string name="rappeler">Se rappeler de moi</string>
    <string name="chienPerdu">Chiens perdus dans la région</string>
    <string name="title_activity_menu">Menu</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="approcherCollier">Approcher le collier Alawan</string>

    <string name="text_alerts_profil">text_alerts_profil</string>
    <string name="text_animaux_profil">text_animaux_profil</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>