<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Inscription">

    <ImageView
        android:id="@+id/ivBackground"
        android:layout_width="432dp"
        android:layout_height="754dp"
        android:contentDescription="@string/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/BackgroundAlawan" />

    <EditText
        android:id="@+id/etMdpConf"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginBottom="140dp"
        android:ems="10"
        android:hint="@string/confirmerPassword"
        android:inputType="textPassword"
        android:textColor="@color/vertFonce"
        android:textColorHighlight="@color/vertPale"
        android:textColorHint="@color/vertFonce"
        android:textColorLink="@color/vertPale"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.635"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/creerCompteTitre"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etNom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.936" />

    <EditText
        android:id="@+id/etMail"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/vertFonce"
        android:textColorHighlight="@color/vertPale"
        android:textColorHint="@color/vertFonce"
        android:textColorLink="@color/vertPale"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etMdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.642"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etMdp"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/vertFonce"
        android:textColorHighlight="@color/vertPale"
        android:textColorHint="@color/vertFonce"
        android:textColorLink="@color/vertPale"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etMdpConf"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.642"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etNom"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_marginBottom="12dp"
        android:ems="10"
        android:hint="@string/nom"
        android:inputType="text"
        android:textColor="@color/vertFonce"
        android:textColorHighlight="@color/vertPale"
        android:textColorHint="@color/vertFonce"
        android:textColorLink="@color/vertPale"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/etMail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.642"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btSignIn"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/inscrire"
        android:textSize="24sp"
        android:textStyle="bold"
        android:background="@color/vertFonce"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.924" />

</androidx.constraintlayout.widget.ConstraintLayout>