<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_very_simple"
    tools:context=".ModifyProfil">

    <TextView
        android:id="@+id/tv_title_modifierprofil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="188dp"
        android:fontFamily="@font/inter_black"
        android:text="@string/modifierProfil"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_prenom_modifierprofil"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="56dp"
        android:autofillHints="@string/prenom"
        android:backgroundTint="@color/GreenText"
        android:drawableStart="@drawable/ic_person_black"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/inter_semibold"
        android:hint="@string/prenom"
        android:inputType="text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_modifierprofil" />

    <EditText
        android:id="@+id/et_nom_modifierprofil"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:autofillHints="@string/nom"
        android:backgroundTint="@color/GreenText"
        android:drawableStart="@drawable/ic_person_black"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/inter_semibold"
        android:hint="@string/nom"
        android:inputType="text"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_prenom_modifierprofil" />

    <EditText
        android:id="@+id/et_mail_modifierprofil"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:autofillHints="@string/email"
        android:backgroundTint="@color/GreenText"
        android:drawableStart="@drawable/ic_mail_black"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/inter_semibold"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_nom_modifierprofil" />

    <EditText
        android:id="@+id/et_phone_modifierprofil"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:autofillHints="@string/telephone"
        android:backgroundTint="@color/GreenText"
        android:drawableStart="@drawable/ic_phone_black"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/inter_semibold"
        android:hint="@string/telephone"
        android:inputType="phone"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_mail_modifierprofil" />

    <ImageView
        android:id="@+id/iv_back_modifierprofil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <Button
        android:id="@+id/bt_modifieradresse_modifierprofil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="#00FFFFFF"
        android:fontFamily="@font/inter_black"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/modifierAdresse"
        android:textAlignment="viewEnd"
        android:textColor="@color/GreenText"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.769"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_phone_modifierprofil" />

    <Button
        android:id="@+id/bt_aide_modifierprofil"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:background="#00FFFFFF"
        android:fontFamily="@font/inter_black"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/aide"
        android:textAlignment="viewEnd"
        android:textColor="@color/GreenText"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.832"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_modifieradresse_modifierprofil" />

    <Button

        android:id="@+id/bt_deconnexion_modifierprofil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="#00FFFFFF"
        android:fontFamily="@font/inter_black"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/deconnexion"
        android:textAlignment="viewStart"
        android:textColor="@color/vertFonce"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>