<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_very_simple"
    tools:context=".ModifyAddress">

    <ImageView
        android:id="@+id/iv_alerte_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="38dp"
        android:contentDescription="@string/image"
        app:layout_constraintEnd_toStartOf="@+id/tv_titre_adresse"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back" />

    <TextView
        android:id="@+id/tv_titre_adresse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="172dp"
        android:fontFamily="@font/inter_black"
        android:text="@string/modifierAdresse"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_ville_adresse"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="108dp"
        android:backgroundTint="@color/GreenText"
        android:drawableStart="@drawable/ic_pin_black"
        android:drawablePadding="10dp"
        android:ems="10"
        android:fontFamily="@font/inter_semibold"
        android:hint="@string/ville"
        android:autofillHints="@string/ville"
        android:inputType="text"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_rue_adresse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.617" />

    <EditText
        android:id="@+id/et_rue_adresse"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/GreenText"
        android:ems="10"
        android:fontFamily="@font/inter_semibold"
        android:hint="@string/rue"
        android:autofillHints="@string/rue"
        android:inputType="text"
        android:paddingStart="40dp"
        android:paddingEnd="0dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_num_adresse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_num_adresse"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="12dp"
        android:backgroundTint="@color/GreenText"
        android:ems="10"
        android:fontFamily="@font/inter_semibold"
        android:hint="@string/numeroRue"
        android:autofillHints="@string/numeroRue"
        android:inputType="text"
        android:paddingStart="40dp"
        android:paddingEnd="0dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/et_postal_adresse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_postal_adresse"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="552dp"
        android:backgroundTint="@color/GreenText"
        android:ems="10"
        android:fontFamily="@font/inter_semibold"
        android:hint="@string/postal"
        android:autofillHints="@string/postal"
        android:inputType="text"
        android:paddingStart="40dp"
        android:paddingEnd="0dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt_modifier_adresse"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="480dp"
        android:background="#00FFFFFF"
        android:fontFamily="@font/inter_black"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/modifier"
        android:textAlignment="viewEnd"
        android:textColor="@color/GreenText"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.826"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt_deconnecter_adresse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginBottom="16dp"
        android:background="#00FFFFFF"
        android:fontFamily="@font/inter_black"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/deconnexion"
        android:textAlignment="viewStart"
        android:textColor="@color/vertFonce"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>