<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_simple"
    tools:context=".FirstPage">

    <ImageView
        android:id="@+id/iv_logo_first"
        android:layout_width="182dp"
        android:layout_height="234dp"
        android:contentDescription="@string/image"

        app:layout_constraintBottom_toBottomOf="@+id/bt_inviter_first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.282"
        app:srcCompat="@drawable/logo_1" />

    <TextView
        android:id="@+id/tv_logo_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/nomApp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="34sp"

        app:layout_constraintBottom_toTopOf="@+id/bt_connecter_first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo_first"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/bt_connecter_first"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/btn_signin"
        android:fontFamily="@font/inter_black"
        android:text="@string/login"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/bt_inscrire_first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt_inscrire_first"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginBottom="304dp"
        android:background="@drawable/btn_signup"
        android:fontFamily="@font/inter_black"
        android:text="@string/inscrire"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/bt_inviter_first"
        android:layout_width="313dp"
        android:layout_height="50dp"
        android:background="#00FFFFFF"
        android:fontFamily="@font/inter_semibold"
        android:includeFontPadding="false"
        android:text="@string/continuerInviter"
        android:textColor="@color/gris"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.561"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.981" />

</androidx.constraintlayout.widget.ConstraintLayout>